Gerado um índice localizado

--- a/locales/es.json
+++ b/locales/es.json
@@ -1,5 +1,6 @@
 {
-    "Cookbook": "Recetario",
-    "Also available in": "Disponible también en",
-    "en": "English"
+	"Cookbook": "Recetario",
+	"Also available in": "Disponible también en",
+	"en": "English",
+	"Recipes": "Recetas"
 }
