--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,6 @@
 {
-    "Cookbook": "Cookbook",
-    "Also available in": "Also available in",
-    "es": "castellano"
+	"Cookbook": "Cookbook",
+	"Also available in": "Also available in",
+	"es": "castellano",
+	"Recipes": "Recipes"
 }
